# SIDAR

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default_render.yaml
deploy/: com.siny.filebrowser.plist  nginx-sidar.conf.template  sidar-receiver.service.template
docs/: MP3D_TOPIC_CONTRACT.md  PHONE_SCENE_FORMAT.md  VPS_UPLOAD_RELAY.md  WORKFLOW.md  sidar_logo_motion_preview.html
ios/PhoneSceneCapture/: README.md
ios/PhoneSceneCapture/PhoneSceneCapture/: ARRecorder.swift  ContentView.swift  FrameWriter.swift  Info.plist  MatrixJSON.swift  MeshPLYWriter.swift  MeshPreviewAssetBuilder.swift  MeshPreviewTypes.swift  MeshPreviewView.swift  PhoneSceneCaptureApp.swift  RoomAnnotationTypes.swift  RoomAnnotationView.swift  RoomGTValidator.swift  SidarLibraryViews.swift  TopDownMapBuilder.swift
ios/PhoneSceneCapture/PhoneSceneCapture.xcodeproj/: project.pbxproj
ios/PhoneSceneCapture/PhoneSceneCapture.xcodeproj/xcshareddata/xcschemes/: PhoneSceneCapture.xcscheme
paper/TRO/figures/: artifact-build-manifest.json  sidar_architecture.pptx
scripts/: build_iphone_app.sh  install_sidar_receiver_workstation.sh  install_sidar_vps_proxy.sh  run_phone_to_mp3d_demo.sh
src/phone_scene_to_isaac/: __init__.py  annotation.py  cli.py  coordinates.py  io.py  isaac.py  mesh.py  receiver.py  rosbag_writer.py  types.py  validation.py
tests/: scene_fixtures.py  test_annotation_geometry.py  test_cli.py  test_demo_bag.py  test_isaac.py  test_mesh.py  test_receiver.py  test_validation.py
