[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-scene-to-isaac"
version = "0.2.0"
description = "SIDAR iPhone LiDAR capture, validation, and simulator reconstruction tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "Pillow",
  "PyYAML",
  "rosbags",
  "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
phone-scene = "phone_scene_to_isaac.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
